Drop 'const' from arguments that expect a deduced function-ptr type

Apparently the cv-qualifier of a function type must match,
during deduction, see http://www.open-std.org/jtc1/sc22/wg21/docs/cwg_active.html#1584

Recent Clang versions error about this so the code must be adjusted.

Bug: 840251
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;luci.chromium.try:linux_optional_gpu_tests_rel;luci.chromium.try:mac_optional_gpu_tests_rel;luci.chromium.try:win_optional_gpu_tests_rel
Change-Id: I715da586731ee97a7c5bfc27b522454dac14d316
Reviewed-on: https://chromium-review.googlesource.com/1046588
Commit-Queue: Hans Wennborg <hans@chromium.org>
Reviewed-by: Max Morin <maxmorin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#556395}