media/audio/mac/coreaudio_dispatch_override.cc
@@ -17,7 +17,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 namespace {
 struct dyld_interpose_tuple {
   template <typename T>
-  dyld_interpose_tuple(const T* replacement, const T* replacee)
+  dyld_interpose_tuple(T* replacement, T* replacee)
       : replacement(reinterpret_cast<const void*>(replacement)),
         replacee(reinterpret_cast<const void*>(replacee)) {}
   const void* replacement;
